improved documetation
