# repositories/voters-frontend/docs/swagger.json
@@ -87,7 +87,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/domain.Vote"
+                            "$ref": "#/definitions/controller.PostVoteRequestBody"
                         }
                     }
                 }
@@ -121,6 +121,17 @@
         }
     },
     "definitions": {
+        "controller.PostVoteRequestBody": {
+            "type": "object",
+            "properties": {
+                "captcha_token": {
+                    "type": "string"
+                },
+                "participant_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "domain.Participant": {
             "type": "object",
             "properties": {
@@ -129,20 +140,6 @@
                 },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "domain.Vote": {
-            "type": "object",
-            "properties": {
-                "participant": {
-                    "$ref": "#/definitions/domain.Participant"
-                },
-                "timestamp": {
-                    "type": "string"
-                },
-                "voteID": {
-                    "type": "integer"
                 }
             }
         }
